## Process this file with automake to produce Makefile.in

info_TEXINFOS = cfs-el.texinfo

cfs_el_TEXINFOS = version.texinfo news.texinfo gpl.texinfo fdl.texinfo \
                  authors.texinfo thanks.texinfo introduction.texinfo \
                  distribution.texinfo configuration.texinfo usage.texinfo 
